--- a/src/index.css
+++ b/src/index.css
@@ -18,7 +18,7 @@ body {
   /* Have space between the habit text and the streak text */
   /* justify-content: space-between; */
   margin: 10px;
-  padding: 0 20px;
+  padding: 0 0 0 20px;
   border-style: solid;
   border-color: #4CC9F0;
   border-radius: 10px;
@@ -29,7 +29,11 @@ body {
   display: flex;
   align-items: center;
   justify-content: space-between;
-  height: 50px;
+  /* height: 50px; */
+}
+
+.streak {
+  display: flex;
 }
 
 .editHabit {
@@ -47,4 +51,8 @@ body {
   border-color: #4CC9F0;
   border-radius: 10px;
   /* height: 50px; */
+}
+
+.habitText {
+  overflow-wrap: break-word;
 }
