changed myprofilebox to className instead of id

--- a/src/index.css
+++ b/src/index.css
@@ -4,11 +4,7 @@
 	padding-left: 10px;
 }
 
-#myprofilebox {
+.myprofilebox {
 	display: flex;
 	justify-content: space-between;
 }
-
-/* #container {
-	align-items: flex-end;
-} */
