--- a/src/index.css
+++ b/src/index.css
@@ -1,7 +1,7 @@
 @import url("https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap");
 
 body {
-  font-family: 'Roboto', 'Comic Sans MS';
+  font-family: "Roboto", "Comic Sans MS";
 }
 
 .container {
@@ -17,7 +17,7 @@ body {
   margin: 10px;
   padding: 0 5px 0 20px;
   border-style: solid;
-  border-color: #4CC9F0;
+  border-color: #4cc9f0;
   border-radius: 10px;
 }
 
@@ -56,18 +56,18 @@ body {
 .addHabitButton {
   margin: 10px;
   border-style: solid;
-  border-color: #4CC9F0;
+  border-color: #4cc9f0;
   border-radius: 10px;
   /* height: 50px; */
 }
 
 /* Moved the title 'STREAKS' a bit to the right */
 .title {
-	padding-left: 10px;
+  padding-left: 10px;
 }
 
 /* Move the 'My Profile' box to the right corner of page */
 .myprofilebox {
-	display: flex;
-	justify-content: space-between;
+  display: flex;
+  justify-content: space-between;
 }
