--- a/client/src/index.css
+++ b/client/src/index.css
@@ -6,9 +6,14 @@ body {
 
 .container {
   /* 600px is the minimum width of a chrome window */
-  max-width: 600px;
+  width: 700px;
 
   padding: 20px;
+}
+
+.mainContainer {
+  display: flex;
+  flex-direction: row;
 }
 
 /* The box containing habit information as well as the ability to edit if toggled on */
